<?xml version="1.0"?>
<package format="2">
  <name>wt_description</name>
  <version>0.0.0</version>
  <description>The wt_description package</description>


  <maintainer email="tony@todo.todo">tony</maintainer>



  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend>

  <build_depend>geometry_msgs</build_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <build_depend>tf2</build_depend>
  <exec_depend>tf2</exec_depend>

  <build_depend>tf2_geometry_msgs</build_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>


  <build_depend>urdf</build_depend>
  <build_export_depend>urdf</build_export_depend>
  <exec_depend>urdf</exec_depend>

  <build_depend>controller_manager</build_depend>
  <build_export_depend>controller_manager</build_export_depend>
  <exec_depend>controller_manager</exec_depend>

  <build_depend>robot_state_publisher</build_depend>
  <build_export_depend>robot_state_publisher</build_export_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <exec_depend>joint_state_controller</exec_depend>
  <build_export_depend>joint_state_controller</build_export_depend>
  <build_depend>joint_state_controller</build_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
